data/derived/sp14/progs/unify/prog2916.ml.out
Characters 77-91:
  | Sine(a) -> sin(Times(pi, a))
                  ^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
